# konrad-mvp

./: LICENSE  README.md  chatbot.py  index.html  ingest.py  main.py  pyproject.toml  requirements.txt  script.js  style.css
faiss_index/: index.faiss  index.pkl
